Fix jumpy slider (temporary)

--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -1,10 +1,8 @@
 @use 'variables' as *;
 
-.mat-progress-bar .mat-progress-bar-fill {
-  transition: none !important;
-}
-
-.mat-slider.mat-slider-thumb-container {
+/* TODO remove this */
+.mat-slider-thumb-container,
+.mat-slider-track-fill {
   transition: none !important;
 }
 
